  - Thanks Mercury and Amanieu
  - Added cl_voipShowSender and cl_voipSenderPos cvar:
    - cl_voipShowSender must be set
	- cl_voipSenderPos can be set from 0 to 5 to choose where the sender will be shown on the screen
- support for shooter_dynamite and shooter_molotov map entities
- Doors won't try to move players now
- support UI item to select OpenAL device from available OpenAL devices
*** CHANGES ***
- Reloading bug fixed by Joe Kari
- Fix game crash during game load when using cgame binary library
- Fix server not hitting time limit when only bots are playing (thanks to ioQ3 code engine)
- Fix cinematic rendering with wide screens (thanks to ioQ3 code engine), intro is now visible in wide screen mode
- Fix little freeze/lag in dm_train
- Fix invisible "entity 0" bug near movers entities we can trigger
- Many fixes from ioQuake3 sources
- g_allowVote can be set to the number of seconds before a player can call again a vote
- players name can be tagged to make sure they are unique in game
- settings are now stored in a per-user location, instead of in the game's installation directory
- Fix rotating door comportement when blocked

Changes in SG 1.0-20081231
******************
*** CHANGES ***
- Updated Unix building process to support more processor kind
- Updated Makefile to produce binary libraries for unix
- Updated Makefile to produce sse, sse2 and smp binaries for unix
- Updated Unix building process to keep install & build folder in the source base
- Fix "OP_BLOCK_COPY not dword aligned" in the same way then an old ioQuake3 fix...


Changes since sg 0.9
******************
*** CHANGES ***
- Added .mak, .bat, .lnt, .vprj, .Conscript, .Makefile files from Tequila archive (Excluded a few)
- Fixed buildvm.bat and cleanvm.bat which weren't working due to reorganization
- Organized VC build solutions
- Removed old VC build solutions
- Created SSE and SSE2 build profiles for each solution
- Added lcc compiler toolchain back
- Added AL and unix files
